categories table added to db

--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server:SFILHAPP01;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=SFILHAPP01;Database=Bulky;User Id=wfuser;Password=pass@123;TrustServerCertificate=True;"
   }
 }
